Calculate cancellations according to booking changes

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1346,6 +1346,199 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Cancellations According to Booking Changes:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0     86077\n1     10809\n2      3256\n3       793\n4       314\n5        99\n6        60\n7        28\n8        14\n9         6\n10        5\n11        2\n12        2\n13        3\n14        4\n15        3\n16        2\n17        1\n18        1\n20        1\n21        1\nName: booking_changes, dtype: int64"
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"booking_changes\"].value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "outputs": [],
+   "source": [
+    "booking_changes_0 = not_canceled[\"booking_changes\"].value_counts()\n",
+    "booking_changes_1 = canceled[\"booking_changes\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 444,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0     51065\n1      9272\n2      2599\n3       668\n4       257\n5        81\n6        43\n7        26\n8        10\n9         6\n10        4\n11        2\n12        2\n13        3\n14        3\n15        3\n16        1\n17        1\n18        1\n20        1\n21        1\nName: booking_changes, dtype: int64"
+     },
+     "execution_count": 444,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "booking_changes_0.sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0     35012.0\n1      1537.0\n2       657.0\n3       125.0\n4        57.0\n5        18.0\n6        17.0\n7         2.0\n8         4.0\n9         0.0\n10        1.0\n11        0.0\n12        0.0\n13        0.0\n14        1.0\n15        0.0\n16        1.0\n17        0.0\n18        0.0\n20        0.0\n21        0.0\nName: booking_changes, dtype: float64"
+     },
+     "execution_count": 445,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "booking_changes_1.sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 404,
+   "outputs": [],
+   "source": [
+    "df_booking_changes_1 = pd.DataFrame(booking_changes_1, index=booking_changes_0.index)\n",
+    "df_booking_changes_1.fillna({\"booking_changes\": 0}, inplace=True)\n",
+    "booking_changes_1 = pd.Series(df_booking_changes_1[\"booking_changes\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "outputs": [],
+   "source": [
+    "# adds total of both outcomes\n",
+    "booking_changes_total = booking_changes_0 + booking_changes_1\n",
+    "\n",
+    "percentage_booking_changes = []\n",
+    "for i in booking_changes_total.index:\n",
+    "    percentage_booking_changes.append(round((booking_changes_1[i]/booking_changes_total[i])*100,2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "outputs": [],
+   "source": [
+    "df_percentage_booking_changes = pd.DataFrame(percentage_booking_changes, index=booking_changes_total.index,\n",
+    "                                             columns=[\"cancellations %\"])\n",
+    "\n",
+    "# sns.barplot(x=df_percentage_booking_changes.index, y=df_percentage_booking_changes[\"cancellations %\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 451,
+   "outputs": [],
+   "source": [
+    "df_booking_changes_0 = pd.DataFrame(booking_changes_0.values, index=booking_changes_0.index,\n",
+    "             columns=[\"not_canceled\"])\n",
+    "df_booking_changes_1 = pd.DataFrame(booking_changes_1.values, index=booking_changes_1.index,\n",
+    "             columns=[\"canceled\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 453,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    not_canceled  canceled  cancellations %\n0          51065   35012.0            40.68\n1           9272    1537.0            14.22\n2           2599     657.0            20.18\n3            668     125.0            15.76\n4            257      57.0            18.15\n5             81      18.0            18.18\n6             43      17.0            28.33\n7             26       2.0             7.14\n8             10       4.0            28.57\n10             4       1.0            20.00\n14             3       1.0            25.00\n16             1       1.0            50.00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>not_canceled</th>\n      <th>canceled</th>\n      <th>cancellations %</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>51065</td>\n      <td>35012.0</td>\n      <td>40.68</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9272</td>\n      <td>1537.0</td>\n      <td>14.22</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2599</td>\n      <td>657.0</td>\n      <td>20.18</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>668</td>\n      <td>125.0</td>\n      <td>15.76</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>257</td>\n      <td>57.0</td>\n      <td>18.15</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>81</td>\n      <td>18.0</td>\n      <td>18.18</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>43</td>\n      <td>17.0</td>\n      <td>28.33</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>26</td>\n      <td>2.0</td>\n      <td>7.14</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>10</td>\n      <td>4.0</td>\n      <td>28.57</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>4</td>\n      <td>1.0</td>\n      <td>20.00</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>3</td>\n      <td>1.0</td>\n      <td>25.00</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>50.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 453,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_booking_changes = df_booking_changes_0.join\\\n",
+    "    ([df_booking_changes_1, df_percentage_booking_changes])\n",
+    "\n",
+    "df_booking_changes = df_booking_changes[df_booking_changes[\"cancellations %\"]!=0]\n",
+    "df_booking_changes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
