Add booking changes observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1385,6 +1385,7 @@
    "execution_count": 337,
    "outputs": [],
    "source": [
+    "# counts values for each outcome\n",
     "booking_changes_0 = not_canceled[\"booking_changes\"].value_counts()\n",
     "booking_changes_1 = canceled[\"booking_changes\"].value_counts()"
    ],
@@ -1409,6 +1410,7 @@
     }
    ],
    "source": [
+    "# sorts index numbers by value\n",
     "booking_changes_0.sort_index()"
    ],
    "metadata": {
@@ -1432,6 +1434,7 @@
     }
    ],
    "source": [
+    "# sorts index numbers by value\n",
     "booking_changes_1.sort_index()"
    ],
    "metadata": {
@@ -1446,6 +1449,7 @@
    "execution_count": 404,
    "outputs": [],
    "source": [
+    "\n",
     "df_booking_changes_1 = pd.DataFrame(booking_changes_1, index=booking_changes_0.index)\n",
     "df_booking_changes_1.fillna({\"booking_changes\": 0}, inplace=True)\n",
     "booking_changes_1 = pd.Series(df_booking_changes_1[\"booking_changes\"])"
@@ -1465,6 +1469,7 @@
     "# adds total of both outcomes\n",
     "booking_changes_total = booking_changes_0 + booking_changes_1\n",
     "\n",
+    "# calculates percentage of cancellations for each number of booking changes individually\n",
     "percentage_booking_changes = []\n",
     "for i in booking_changes_total.index:\n",
     "    percentage_booking_changes.append(round((booking_changes_1[i]/booking_changes_total[i])*100,2))"
@@ -1481,10 +1486,9 @@
    "execution_count": 450,
    "outputs": [],
    "source": [
+    "# create a DataFrame with the percentage of cancellations\n",
     "df_percentage_booking_changes = pd.DataFrame(percentage_booking_changes, index=booking_changes_total.index,\n",
-    "                                             columns=[\"cancellations %\"])\n",
-    "\n",
-    "# sns.barplot(x=df_percentage_booking_changes.index, y=df_percentage_booking_changes[\"cancellations %\"])"
+    "                                             columns=[\"cancellations %\"])"
    ],
    "metadata": {
     "collapsed": false,
@@ -1498,6 +1502,7 @@
    "execution_count": 451,
    "outputs": [],
    "source": [
+    "# creates a DataFrame for each outcome\n",
     "df_booking_changes_0 = pd.DataFrame(booking_changes_0.values, index=booking_changes_0.index,\n",
     "             columns=[\"not_canceled\"])\n",
     "df_booking_changes_1 = pd.DataFrame(booking_changes_1.values, index=booking_changes_1.index,\n",
@@ -1512,22 +1517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 454,
    "outputs": [
     {
      "data": {
       "text/plain": "    not_canceled  canceled  cancellations %\n0          51065   35012.0            40.68\n1           9272    1537.0            14.22\n2           2599     657.0            20.18\n3            668     125.0            15.76\n4            257      57.0            18.15\n5             81      18.0            18.18\n6             43      17.0            28.33\n7             26       2.0             7.14\n8             10       4.0            28.57\n10             4       1.0            20.00\n14             3       1.0            25.00\n16             1       1.0            50.00",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>not_canceled</th>\n      <th>canceled</th>\n      <th>cancellations %</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>51065</td>\n      <td>35012.0</td>\n      <td>40.68</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9272</td>\n      <td>1537.0</td>\n      <td>14.22</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2599</td>\n      <td>657.0</td>\n      <td>20.18</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>668</td>\n      <td>125.0</td>\n      <td>15.76</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>257</td>\n      <td>57.0</td>\n      <td>18.15</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>81</td>\n      <td>18.0</td>\n      <td>18.18</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>43</td>\n      <td>17.0</td>\n      <td>28.33</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>26</td>\n      <td>2.0</td>\n      <td>7.14</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>10</td>\n      <td>4.0</td>\n      <td>28.57</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>4</td>\n      <td>1.0</td>\n      <td>20.00</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>3</td>\n      <td>1.0</td>\n      <td>25.00</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>50.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 453,
+     "execution_count": 454,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# joins all three DataFrames side by side\n",
     "df_booking_changes = df_booking_changes_0.join\\\n",
     "    ([df_booking_changes_1, df_percentage_booking_changes])\n",
     "\n",
+    "# remove rows with 0% cancellations\n",
     "df_booking_changes = df_booking_changes[df_booking_changes[\"cancellations %\"]!=0]\n",
     "df_booking_changes"
    ],
@@ -1539,10 +1546,27 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">\n",
+    ">> * While a large amount of bookings with no changes were canceled, this category can change overtime\n",
+    ">> which could possibly be a source of leakage."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
