--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
@@ -1594,7 +1594,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           Resort Hotel Canceled %  City Hotel Canceled %\nJanuary                      15.33                  39.29\nFebruary                     25.10                  38.22\nMarch                        22.89                  36.82\nApril                        29.35                  46.17\nMay                          28.83                  44.26\nJune                         32.95                  44.37\nJuly                         31.03                  40.63\nAugust                       33.33                  39.78\nSeptember                    32.13                  42.06\nOctober                      27.20                  42.82\nNovember                     19.39                  37.96\nDecember                     23.52                  41.49",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Resort Hotel Canceled %</th>\n      <th>City Hotel Canceled %</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>January</th>\n      <td>15.33</td>\n      <td>39.29</td>\n    </tr>\n    <tr>\n      <th>February</th>\n      <td>25.10</td>\n      <td>38.22</td>\n    </tr>\n    <tr>\n      <th>March</th>\n      <td>22.89</td>\n      <td>36.82</td>\n    </tr>\n    <tr>\n      <th>April</th>\n      <td>29.35</td>\n      <td>46.17</td>\n    </tr>\n    <tr>\n      <th>May</th>\n      <td>28.83</td>\n      <td>44.26</td>\n    </tr>\n    <tr>\n      <th>June</th>\n      <td>32.95</td>\n      <td>44.37</td>\n    </tr>\n    <tr>\n      <th>July</th>\n      <td>31.03</td>\n      <td>40.63</td>\n    </tr>\n    <tr>\n      <th>August</th>\n      <td>33.33</td>\n      <td>39.78</td>\n    </tr>\n    <tr>\n      <th>September</th>\n      <td>32.13</td>\n      <td>42.06</td>\n    </tr>\n    <tr>\n      <th>October</th>\n      <td>27.20</td>\n      <td>42.82</td>\n    </tr>\n    <tr>\n      <th>November</th>\n      <td>19.39</td>\n      <td>37.96</td>\n    </tr>\n    <tr>\n      <th>December</th>\n      <td>23.52</td>\n      <td>41.49</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordered_months = [\"January\", \"February\", \"March\", \"April\", \"May\", \"June\",\n",
+    "          \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"]\n",
+    "\n",
+    "resort_canceled_percent = []\n",
+    "city_canceled_percent = []\n",
+    "\n",
+    "# dividing cancellation outcome by hotel and month of arrival\n",
+    "resort_1 = canceled[canceled[\"hotel\"]==\"Resort Hotel\"][\"arrival_date_month\"].value_counts()\n",
+    "resort_0 = not_canceled[not_canceled[\"hotel\"]==\"Resort Hotel\"][\"arrival_date_month\"].value_counts()\n",
+    "city_1 = canceled[canceled[\"hotel\"]==\"City Hotel\"][\"arrival_date_month\"].value_counts()\n",
+    "city_0 = not_canceled[not_canceled[\"hotel\"]==\"City Hotel\"][\"arrival_date_month\"].value_counts()\n",
+    "\n",
+    "# calculating cancellation percentage according to hotel\n",
+    "for i in ordered_months:\n",
+    "    resort_canceled_percent.append(round((resort_1[i] / (resort_0[i]+resort_1[i]))*100,2))\n",
+    "    city_canceled_percent.append(round((city_1[i]/(city_0[i]+city_1[i]))*100,2))\n",
+    "\n",
+    "# creates a DataFrame with the cancellation percentage of each hotel\n",
+    "df_resort_cancel = pd.DataFrame(resort_canceled_percent, index=ordered_months,\n",
+    "                                       columns=[\"Resort Hotel Canceled %\"])\n",
+    "df_city_cancel = pd.DataFrame(city_canceled_percent, index=ordered_months,\n",
+    "                                       columns=[\"City Hotel Canceled %\"])\n",
+    "\n",
+    "# joins DataFrames\n",
+    "df_hotel_cancel = df_resort_cancel.join(df_city_cancel)\n",
+    "df_hotel_cancel"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "outputs": [],
    "source": [],
    "metadata": {
