Add hotel cancellations observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1642,6 +1642,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> * There are more instances for City Hotel than Resort Hotel in the data.\n",
+    ">> * City Hotel has a higher cancellation rate according to arrival months."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "outputs": [],
