Add meal cancellations observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
@@ -1689,6 +1689,16 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> * The BB (Bed & Breakfast) meal is most common. It is also most frequently canceled."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
