Calculate cancellations percentage according to customer type

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1446,6 +1446,43 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "df2[\"customer_type\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# calculating cancellation percentage according to customer type\n",
+    "customer_type_percent = []\n",
+    "\n",
+    "customer_type_1 = canceled[\"customer_type\"].value_counts()\n",
+    "customer_type_total = df2[\"customer_type\"].value_counts()\n",
+    "\n",
+    "for i in customer_type_total.index:\n",
+    "    customer_type_percent.append(str(i+\": \") +\n",
+    "                    str(round((customer_type_1[i]/customer_type_total[i])*100,2)))\n",
+    "customer_type_percent"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
