--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2145,6 +2145,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> #### Observations:\n",
+    ">> * The non refund values and graph looks a bit off. It almost seems as if the values\n",
+    ">> for cancellation were switched!\n",
+    ">> In light of this, it might be better to evaluate the model both with and without this\n",
+    ">> feature.\n",
+    "> "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -2152,7 +2169,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%"
+     "name": "#%%\n"
     }
    }
   }
