Add countries observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2163,7 +2163,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> ### Cancellations According to Country Origin"
+    "> ### Cancellations According to Country of Origin"
    ],
    "metadata": {
     "collapsed": false
@@ -2253,8 +2253,24 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> * There are 175 unique countries. This indicates that the data is representative\n",
+    ">> worldwide, contrary to a specific region.\n",
+    ">> * More than half of the instances have 50 or fewer observations in the DataFrame.\n",
+    ">> * A model would likely generalize better if we avoid using this column."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
