--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1918,6 +1918,59 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Removing the Following Columns:\n",
+    ">> #### Numerical Attributes:\n",
+    ">> * arrival_date_year: This category references towards certain years. This could be\n",
+    ">> problematic for instances during years that do not appear in the training data, or\n",
+    ">> perhaps have bias towards certain years specifically due to different amounts in the\n",
+    ">> training data.\n",
+    ">> * arrival_date_day_of_month: The column arrival date week of month generalizes this.\n",
+    ">> * booking_changes: Could change over time, potentially causing data leakage.\n",
+    ">> * days_in_waiting_list: Could constantly change over time. Additionally, there are many\n",
+    ">> instances. This could prevent the model from generalizing.\n",
+    ">> * agent & company: Represented by an ID. These columns are uninformative since they\n",
+    ">> contain a substantial amount of various numerical values without having an actual\n",
+    ">> numerical meaning. Since other columns (such as market segment) indicate the type of\n",
+    ">> reservation, these columns won't be of much additional use.\n",
+    ">>\n",
+    ">> #### Categorical Attributes:\n",
+    ">> * country: There are many categories, most with few instances. In order to make a model\n",
+    ">> that generalizes, it is better to dismiss this category.\n",
+    ">> * assigned_room_type: Similar to reserved_room_type and seems like the reserved room is\n",
+    ">> a more suitable choice.\n",
+    ">> * reservation_status: Major data leakage! The categories are Check-Out, Canceled and No-Show.\n",
+    ">> This is exactly what we are trying to predict.\n",
+    ">> * reservation_status_date: This is the date when the reservation status was last changed,\n",
+    ">> and therefore is irrelevant."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "num_features = [\"lead_time\", \"stays_in_weekend_nights\", \"stays_in_week_nights\", \"adults\",\n",
+    "                \"children\", \"babies\", \"is_repeated_guest\", \"previous_cancellations\",\n",
+    "                \"previous_bookings_not_canceled\", \"adr\", \"required_car_parking_spaces\",\n",
+    "                \"total_of_special_requests\"]\n",
+    "\n",
+    "cat_features = [\"hotel\", \"arrival_date_week_number\", \"arrival_date_month\", \"meal\",\n",
+    "                \"market_segment\", \"distribution_channel\", \"reserved_room_type\",\n",
+    "                \"deposit_type\", \"customer_type\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
