Add replace meal custom transformer

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1974,6 +1974,30 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# Undefined/SC both represent no meal package and can be combined\n",
+    "\n",
+    "class ReplaceMeal(TransformerMixin):\n",
+    "\n",
+    "    def fit(self,X, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        XData = X.copy()\n",
+    "        XData[\"meal\"].replace(\"Undefined\", \"SC\", inplace=True)\n",
+    "        return XData"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
