Add numerical attributes pipeline

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1998,6 +1998,25 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# SimpleImputer constant default fills values with zero\n",
+    "# MinMaxScaler normalize data (rescale between 0-1)\n",
+    "num_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"constant\")),\n",
+    "    (\"min_max\", MinMaxScaler())\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
