Add categorical attributes pipeline

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2017,6 +2017,27 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# SimpleImputer fills missing values with 'Unknown'\n",
+    "# OneHotEncoder converts categories to a numeric dummy array\n",
+    "# (one binary attribute per category)\n",
+    "cat_pipeline = Pipeline([\n",
+    "    (\"meal\", ReplaceMeal()),\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"constant\", fill_value=\"Unknown\")),\n",
+    "    (\"one_hot\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
