Fit transform training predictors using full pipeline

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2058,6 +2058,21 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# transform training data using pipeline\n",
+    "X_train_prepared = full_pipeline.fit_transform(X_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
