Add display scores function

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2070,6 +2070,33 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. Training and Evaluating Models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# function prints scores, mean and std\n",
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard deviation:\", scores.std())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
