Add features explanation markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -129,6 +129,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> As shown above, there are no missing values which is excellent!\n",
+    ">\n",
+    "> *It is vital to understand the features we are working with.*\n",
+    "> ### Features in the DataFrame:\n",
+    ">> 1. course_id: Course identification number\n",
+    ">> 2. course_title: Title of course\n",
+    ">> 3. url: Course URL\n",
+    ">> 4. is_paid: True if the course costs money, False if the course is free\n",
+    ">> 5. price: Price of course\n",
+    ">> 6. num_subscribers: Number of subscribers for the course\n",
+    ">> 7. num_lectures: Number of lectures in the course\n",
+    ">> 8. level: Difficulty level of the course\n",
+    ">> 9. content_duration: Duration of all course materials\n",
+    ">> 10. published_timestamp: Course publication date\n",
+    ">> 11. subject: Subject of course"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
