--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -172,6 +172,99 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "df.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Initial observations from the histograms:\n",
+    ">> 1. Most course durations are between 0-5 hours.\n",
+    ">> 2. There are usually around 1-50 lectures per course.\n",
+    ">> 3. Courses tend to have few reviews. There are probably a handful of courses\n",
+    ">> with a large amount of reviews since the X axis goes up to 25000 while over 3000\n",
+    ">> instances are represented in the first bin.\n",
+    ">> 4. The majority of courses are in the same range of subscribers. The instances farther up\n",
+    ">> the scale were probably more successful or perhaps courses on a trending topic.\n",
+    ">> 5. Assuming the prices are in USD, the range is between 0-250 dollars.\n",
+    ">> The plot shows the most common price roughly $25.\n",
+    ">>\n",
+    ">> It would probably be a good idea to look further into some of these values.\n",
+    ">> For instance, if the content duration or number of lectures is listed as 0."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Objective:\n",
+    "> #### Predicting the number of subscribers for a course.\n",
+    ">> ##### Chosen Feature:\n",
+    ">> *num_subscribers column*\n",
+    ">>> The column represents how many people have subscribed for each individual course.\n",
+    ">>> ##### Motive:\n",
+    ">>> Predicting the number of people interested in a course. The more subscribers, the\n",
+    ">>> more popular the course."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> #### Splitting the Data:\n",
+    ">> Before further analysis let's split the data into a training set and a testing set.\n",
+    ">> This will ensure avoidance of bias that could occur from learning the data as a whole."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# use sklearn train_test_split function to split the data\n",
+    "# the random state parameter ensures that data will be shuffled and split the same way in each run\n",
+    "train_set, test_set = train_test_split(df, test_size=0.20, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"Number of instances in training set: \", len(train_set))\n",
+    "print(\"Number of instances in testing set: \", len(test_set))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
