Copy training set for section 2

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -169,20 +169,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "> Initial observations from the histograms:\n",
@@ -253,6 +239,45 @@
    "source": [
     "print(\"Number of instances in training set: \", len(train_set))\n",
     "print(\"Number of instances in testing set: \", len(test_set))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2. Understanding and Visualizing the Data\n",
+    "> ##### *The motivation for this section is to gain more insights*"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# deep copy of the training set\n",
+    "df2 = train_set.copy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df2.head(2)"
    ],
    "metadata": {
     "collapsed": false,
