Add scatter plot of strongest correlation

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -330,10 +330,34 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# a histogram plot for attributes with a high correlation\n",
+    "\n",
     "attributes = [\"num_subscribers\", \"num_reviews\", \"num_lectures\",\n",
     "              \"content_duration\", \"course_id\"]\n",
     "\n",
     "scatter_matrix(df2[attributes], figsize=(12,8))\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# scatter plot of the strongest correlation in the corr matrix\n",
+    "# the alpha is set to show the distribution more clearly\n",
+    "df2.plot(kind=\"scatter\", x=\"num_reviews\", y=\"num_subscribers\", alpha=0.1,\n",
+    "         color='b', figsize=(10,5))\n",
+    "plt.title(\"Reviews and Subscribers Correlation\", size=20)\n",
+    "plt.xlabel(\"num_reviews\", size=15)\n",
+    "plt.ylabel(\"num_subscribers\", size=15)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ],
