Add correlations overview markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -369,10 +369,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> #### Correlations with num_subscribers Attribute- Overview:\n",
+    "> The strongest positive correlations (0.1 or more) are:\n",
+    "> * num_reviews\n",
+    "> * num_lectures\n",
+    "> * content_duration\n",
+    ">\n",
+    "> The strongest negative correlations (-0.1 or less) are:\n",
+    "> * course_id\n",
+    "> * is_paid"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
