Add course ID overview markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -454,7 +454,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# display new shape\n",
+    "# examine changes\n",
     "df2.shape"
    ],
    "metadata": {
@@ -462,6 +462,17 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Overview:\n",
+    "> * The course ID is unique for each course.\n",
+    "> * This column should be removed when training a model in order to generalize better."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
