--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -722,7 +722,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1    2700\n0     239\nName: is_paid, dtype: int64"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count number of instances for each outcome\n",
+    "df2[\"is_paid\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "# use groupby for price attribute\n",
+    "price_values = df2.groupby(\"price\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(239, 12)"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if number of free courses matches when the price is 0\n",
+    "price_values_0 = price_values.get_group(0)\n",
+    "price_values_0.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "outputs": [],
    "source": [],
    "metadata": {
