--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -875,7 +875,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    price  number_of_instances  % of data  num_subscribers\n1      20                  672      22.86          1086051\n2      50                  376      12.79           592522\n3       0                  239       8.13          2969312\n4     200                  237       8.06          1095015\n5      40                  173       5.89           169486\n6      30                  133       4.53           247634\n7      25                  122       4.15           133833\n8      95                  119       4.05           255956\n9     100                  105       3.57           331746\n10    195                  100       3.40           799940",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>price</th>\n      <th>number_of_instances</th>\n      <th>% of data</th>\n      <th>num_subscribers</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>20</td>\n      <td>672</td>\n      <td>22.86</td>\n      <td>1086051</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50</td>\n      <td>376</td>\n      <td>12.79</td>\n      <td>592522</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>239</td>\n      <td>8.13</td>\n      <td>2969312</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>200</td>\n      <td>237</td>\n      <td>8.06</td>\n      <td>1095015</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>40</td>\n      <td>173</td>\n      <td>5.89</td>\n      <td>169486</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>30</td>\n      <td>133</td>\n      <td>4.53</td>\n      <td>247634</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>25</td>\n      <td>122</td>\n      <td>4.15</td>\n      <td>133833</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>95</td>\n      <td>119</td>\n      <td>4.05</td>\n      <td>255956</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>100</td>\n      <td>105</td>\n      <td>3.57</td>\n      <td>331746</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>195</td>\n      <td>100</td>\n      <td>3.40</td>\n      <td>799940</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a DataFrame with the results\n",
+    "prices_top10_dict = {\"price\": prices_top10.index, \"number_of_instances\": prices_top10.values,\n",
+    "                     \"% of data\": prices_percent_in_data, \"num_subscribers\": num_subscribed}\n",
+    "prices_top10_df = pd.DataFrame(prices_top10_dict, index=range(1,11))\n",
+    "prices_top10_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "outputs": [],
    "source": [],
    "metadata": {
