Add price features observations markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -962,6 +962,22 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    "> * As speculated earlier in the initial observations,$20 is the most common price for a course.\n",
+    "> * The number of listings with the price $0 matches the number of instances that were\n",
+    "> labeled \"False\" in the is_paid column.\n",
+    "> * The prices listed tend to increase by 5 dollars until they reach the maximum price\n",
+    "> which is $200.\n",
+    "> * Among the 10 most common prices in the data, most are subscribed to the free courses.\n",
+    "> * Content duration is longer for paid courses."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "outputs": [],
