Add level and subject observations markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -860,6 +860,25 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    "> * All Levels is the most common level, representing over 50%.\n",
+    "> * Web Development is the most common subject, and Business Finance is second with\n",
+    "> approximately 1% difference respectively.\n",
+    "> * Price variations according to the level of the course also show that Expert is\n",
+    "> the least common level in the data. It is also the only level that does not\n",
+    "> provide free courses. The other levels are dispersed more frequently\n",
+    "> throughout the line.\n",
+    "> * Web Development courses are significantly higher in subscribers than the other subjects.\n",
+    "> Since Business Finance falls shortly behind in content, it is likely that people are more\n",
+    "> interested in studying Web Development courses."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
