Edit heading title

--- a/1SA Final Project pt.2.ipynb
+++ b/1SA Final Project pt.2.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "<h1 style=\"text-align: center;\">Data Science Project</h1>\n",
+    "<h2 style=\"text-align: center;\">Part 2</h2>"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "<h1><center>Data Science Project</center></h1>\n",
-    "<h2><center>Part 2</center></h2>"
-   ],
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-916d8bc229c1>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-1-916d8bc229c1>\"\u001B[1;36m, line \u001B[1;32m1\u001B[0m\n\u001B[1;33m    <h1><center>Data Science Project</center></h1>\u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ]
+   }
   },
   {
    "cell_type": "markdown",
