Edit table in question 1

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -95,9 +95,9 @@
     "Probability for cookies in bowls:\n",
     "\n",
     "-|Bowl 1| Bowl 2\n",
-    ":---:|:---:|:---:\n",
-    "Chocolate Cookies | $\\frac{3}{4}$ |$\\frac{1}{2}$\n",
-    "Almond Cookies | $\\frac{1}{4}$ |$\\frac{1}{2}$"
+    "---|:---:|:---:\n",
+    "**Chocolate Cookies** | $\\frac{3}{4}$ |$\\frac{1}{2}$\n",
+    "**Almond Cookies** | $\\frac{1}{4}$ |$\\frac{1}{2}$"
    ],
    "metadata": {
     "collapsed": false,
