--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -147,6 +147,52 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Question 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There are two possible outcomes:\n",
+    "1. The green m&m was in the old bag and the yellow in the new bag.\n",
+    "2. The green m&m was in the new bag and the yellow in the old bag.\n",
+    "\n",
+    "Probability for color in each bag:\n",
+    "\n",
+    "-|1| 2\n",
+    ":---:|:---:|:---:\n",
+    "**Green** | $0.1$ |$0.2$\n",
+    "**Yellow** | $0.14$ |$0.2$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Probability that option 2 occurred:\n",
+    "$\\frac{0.2\\cdot0.2\\cdot0.5}{0.1\\cdot0.14\\cdot0.5+0.2\\cdot0.2\\cdot0.5}=\\frac{0.02}{0.027}=\\frac{20}{27}$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false,
