Edit question 2 markdown

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -161,8 +161,8 @@
    "cell_type": "markdown",
    "source": [
     "There are two possible outcomes:\n",
-    "1. The green m&m was in the old bag and the yellow in the new bag.\n",
-    "2. The green m&m was in the new bag and the yellow in the old bag.\n",
+    "1. The green M&M was in the old bag and the yellow M&M in the new bag.\n",
+    "2. The green M&M was in the new bag and the yellow M&M in the old bag.\n",
     "\n",
     "Probability for color in each bag:\n",
     "\n",
