Add answer to question 3

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -95,7 +95,7 @@
     "Probability for cookies in bowls:\n",
     "\n",
     "-|Bowl 1| Bowl 2\n",
-    "---|:---:|:---:\n",
+    ":---:|:---:|:---:\n",
     "**Chocolate Cookies** | $\\frac{3}{4}$ |$\\frac{1}{2}$\n",
     "**Almond Cookies** | $\\frac{1}{4}$ |$\\frac{1}{2}$"
    ],
@@ -189,6 +189,148 @@
     "pycharm": {
      "name": "#%% md\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Question 3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Bayes Theorem Equation:\n",
+    "$P(H/E)=\\frac{P(E/H)\\cdot P(H)}{P(E)}$\n",
+    "\n",
+    "$H$ - the person is sick\n",
+    "\n",
+    "$E$ - the test is positive"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### A."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Likelihood the test is positive:\n",
+    "$P(E/H)=1$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability that a person is sick:\n",
+    "$P(H)=10^{-4}$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability that the test result is positive:\n",
+    "$P(E)=1\\cdot10^{-4}+0.01\\cdot(1-10^{-4})=0.010099$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability of being ill:\n",
+    "$P(H/E)=\\frac{1\\cdot10^{-4}}{0.010099}=\\frac{100}{10099}\\approx0.0099$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### B."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Likelihood the test is positive:\n",
+    "$P(E/H)=1$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability that a person is sick:\n",
+    "$P(H)=\\frac{1}{200}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability that the test result is positive:\n",
+    "$P(E)=1\\cdot\\frac{1}{200}+0.01\\cdot(1-\\frac{1}{200})=0.01495$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability of being ill:\n",
+    "$P(H/E)=\\frac{1\\cdot\\frac{1}{200}}{0.01495}=\\frac{100}{299}\\approx0.334$"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
