--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -17,6 +17,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## **Probability and Bayes Theorem**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Question 1"
    ],
    "metadata": {
@@ -331,6 +343,129 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Random Variables**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### The expected value of a finite case:\n",
+    "$X$ is a random value. The expectation of $X$ is:\n",
+    "\n",
+    "$E(X)=\\sum_{i=0}^{k}x_{i}P(X_{i})$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Question 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There are $6^2=36$ possible outcomes when rolling two dices."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Outcomes with a sum that is divisible by $3$:\n",
+    "\n",
+    "|Dice 1|Dice 2\n",
+    "|:----:|:----:\n",
+    "   1   |   2\n",
+    "   1   |   5\n",
+    "   2   |   1\n",
+    "   2   |   4\n",
+    "   3   |   3\n",
+    "   3   |   6\n",
+    "   4   |   2\n",
+    "   4   |   5\n",
+    "   5   |   1\n",
+    "   5   |   4\n",
+    "   6   |   3\n",
+    "   6   |   6\n",
+    "\n",
+    "Total number of possible outcomes: $12$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Probability that the sum of the dice is divisible by $3$:\n",
+    "$\\frac{12}{36}=\\frac{1}{3}$\n",
+    "\n",
+    "Win: $\\$5$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Probability that the sum is not divisible by $3$:\n",
+    "$1-\\frac{12}{36}=\\frac{2}{3}$\n",
+    "\n",
+    "Loose: $\\$3$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Expected value of playing the game:\n",
+    "$E(X)=6\\cdot\\frac{1}{3}+(-3)\\cdot\\frac{2}{3}=0$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
