--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -401,20 +401,20 @@
    "source": [
     "Outcomes with a sum that is divisible by $3$:\n",
     "\n",
-    "|Dice 1|Dice 2\n",
-    "|:----:|:----:\n",
-    "   1   |   2\n",
-    "   1   |   5\n",
-    "   2   |   1\n",
-    "   2   |   4\n",
-    "   3   |   3\n",
-    "   3   |   6\n",
-    "   4   |   2\n",
-    "   4   |   5\n",
-    "   5   |   1\n",
-    "   5   |   4\n",
-    "   6   |   3\n",
-    "   6   |   6\n",
+    "Dice 1|Dice 2\n",
+    "----|----\n",
+    "1|2\n",
+    "1|5\n",
+    "2|1\n",
+    "2|4\n",
+    "3|3\n",
+    "3|6\n",
+    "4|2\n",
+    "4|5\n",
+    "5|1\n",
+    "5|4\n",
+    "6|3\n",
+    "6|6\n",
     "\n",
     "Total number of possible outcomes: $12$"
    ],
